--- a/META.yml
+++ b/META.yml
@@ -22,6 +22,6 @@ recommends:
   Redis: '0'
 requires:
   Apache::Session: '0'
-version: v0.2.1
+version: '0.3'
 x_deprecated: 1
 x_serialization_backend: 'CPAN::Meta::YAML version 0.018'
